fix: issue with whitespace wrapping

--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -16,6 +16,7 @@ body {
 
 .log {
     resize: none;
+    white-space: pre-wrap;
     display: block;
     font-weight: 300;
     font-family: Verdana, Arial, Helvetica, sans-serif;
